--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ace-builds": "1.4.12",
     "blueimp-file-upload": "10.13.0",
     "bootbox": "3.2.0",
+    "bootstrap": "v3.4.1",
     "chart.js": "2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "eslint-config-discourse": "^1.1.8",
